fix the wrapping issue for checkbox and radio group inputs

--- a/src/components/controls_panel/Controls.css
+++ b/src/components/controls_panel/Controls.css
@@ -71,6 +71,7 @@
   justify-content: center;
   align-items:center;
   height:90%;
+  flex-wrap: wrap;
 }
 
 .ctrl-param {
